--- a/AngularSPA/index.html
+++ b/AngularSPA/index.html
@@ -2,15 +2,29 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Angular Registration</title>
+    <link href="content/bootstrap.min.css" rel="stylesheet">
     <script src="scripts/jquery-2.1.1.js" type="text/javascript"></script>
     <script src="scripts/angular.js" type="text/javascript"></script>
     <script src="scripts/angular-route.js" type="text/javascript"></script>
     <script src="scripts/app/app.js" type="text/javascript"></script>
     <script src="scripts/app/controllers/registrationController.js" type="text/javascript"></script>
+    <script src="scripts/bootstrap.min.js"></script>
 </head>
 <body>
-    <div ng-app="registration" ng-controller="RegistrationCtrl">
+    <div ng-app="registration" ng-controller="RegistrationCtrl" class="container">
+        <div class="jumbotron">
+            <h1>Sample AngularJS Wizard SPA</h1>
+        </div>
         <div ng-switch="getCurrentStep()">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3>Step {{currentStep+1}}</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">&nbsp;</div>
+            </div>
+
             <div ng-switch-when="step1">
                 <ng-include src="'scripts/app/views/step1.html'"></ng-include>
             </div>
@@ -23,8 +37,19 @@
                 <ng-include src="'scripts/app/views/step3.html'"></ng-include>
             </div>
         </div>
-        <button ng-click="prevStep()" ng-show="currentStep != 0">Back</button>
-        <button ng-click="nextStep()" ng-show="!isLastStep()">Next</button>
+
+        <div class="row">
+            <div class="col-md-12">&nbsp;</div>
+        </div>
+        <div class="row">
+            <div class="col-md-2 col-md-offset-1">
+                <button ng-click="prevStep()" ng-show="currentStep != 0" class="btn btn-primary">Back</button>
+            </div>
+            <div class="col-md-9">
+                <button ng-click="nextStep()" ng-show="!isLastStep()" class="btn btn-primary">Next</button>
+            </div>
+        </div>
     </div>
+    
 </body>
 </html>
