--- a/AngularSPA/index.html
+++ b/AngularSPA/index.html
@@ -7,6 +7,7 @@
     <script src="scripts/angular.js" type="text/javascript"></script>
     <script src="scripts/angular-route.js" type="text/javascript"></script>
     <script src="scripts/app/app.js" type="text/javascript"></script>
+    <script src="scripts/app/services/carMakeService.js"></script>
     <script src="scripts/app/controllers/registrationController.js" type="text/javascript"></script>
     <script src="scripts/bootstrap.min.js"></script>
 </head>
@@ -15,14 +16,11 @@
         <div class="jumbotron">
             <h1>Sample AngularJS Wizard SPA</h1>
         </div>
-        <div ng-switch="getCurrentStep()">
+        <div ng-switch="getCurrentStep()" class="form-group">
             <div class="row">
-                <div class="col-md-12">
-                    <h3>Step {{currentStep+1}}</h3>
+                <div class="col-md-11 col-md-offset-1">
+                    <h4>Step {{currentStep+1}}</h4>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">&nbsp;</div>
             </div>
 
             <div ng-switch-when="step1">
@@ -32,15 +30,12 @@
             <div ng-switch-when="step2">
                 <ng-include src="'scripts/app/views/step2.html'"></ng-include>
             </div>
-            
+
             <div ng-switch-when="step3">
                 <ng-include src="'scripts/app/views/step3.html'"></ng-include>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-12">&nbsp;</div>
-        </div>
         <div class="row">
             <div class="col-md-2 col-md-offset-1">
                 <button ng-click="prevStep()" ng-show="currentStep != 0" class="btn btn-primary">Back</button>
