--- a/AngularSPA/index.html
+++ b/AngularSPA/index.html
@@ -11,40 +11,43 @@
     <script src="scripts/app/controllers/registrationController.js" type="text/javascript"></script>
     <script src="scripts/bootstrap.min.js"></script>
 </head>
-<body>
-    <div ng-app="registration" ng-controller="RegistrationCtrl" class="container">
-        <div class="jumbotron">
-            <h1>Sample AngularJS Wizard SPA</h1>
-        </div>
-        <div ng-switch="getCurrentStep()" class="form-group">
-            <div class="row">
-                <div class="col-md-11 col-md-offset-1">
-                    <h4>Step {{currentStep+1}}</h4>
+    <body>
+        
+        <div ng-app="registration" ng-controller="RegistrationCtrl" class="container">
+            <div class="jumbotron"> 
+                <h1>Sample AngularJS Wizard SPA</h1>
+            </div>
+            <form name="wizard" novalidate>
+                <div ng-switch="getCurrentStep()">
+                    <div class="row">
+                        <div class="col-md-11 col-md-offset-1">
+                            <h4>Step {{currentStep+1}}</h4>
+                        </div>
+                    </div>
+
+                    <div ng-switch-when="step1">
+                        <ng-include src="'scripts/app/views/step1.html'"></ng-include>
+                    </div>
+
+                    <div ng-switch-when="step2">
+                        <ng-include src="'scripts/app/views/step2.html'"></ng-include>
+                    </div>
+
+                    <div ng-switch-when="step3">
+                        <ng-include src="'scripts/app/views/step3.html'"></ng-include>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-2 col-md-offset-1">
+                            <button ng-click="prevStep()" ng-show="currentStep != 0" class="btn btn-primary">Back</button>
+                        </div>
+                        <div class="col-md-9">
+                            <button type="submit" ng-click="nextStep(wizard)" ng-show="!isLastStep()" class="btn btn-primary">Next</button>
+                        </div>
+                    </div>
                 </div>
-            </div>
-
-            <div ng-switch-when="step1">
-                <ng-include src="'scripts/app/views/step1.html'"></ng-include>
-            </div>
-
-            <div ng-switch-when="step2">
-                <ng-include src="'scripts/app/views/step2.html'"></ng-include>
-            </div>
-
-            <div ng-switch-when="step3">
-                <ng-include src="'scripts/app/views/step3.html'"></ng-include>
-            </div>
+            </form>
         </div>
-
-        <div class="row">
-            <div class="col-md-2 col-md-offset-1">
-                <button ng-click="prevStep()" ng-show="currentStep != 0" class="btn btn-primary">Back</button>
-            </div>
-            <div class="col-md-9">
-                <button ng-click="nextStep()" ng-show="!isLastStep()" class="btn btn-primary">Next</button>
-            </div>
-        </div>
-    </div>
     
-</body>
+    </body>
 </html>
