--- a/AngularSPA/index.html
+++ b/AngularSPA/index.html
@@ -10,44 +10,46 @@
     <script src="scripts/app/services/carMakeService.js"></script>
     <script src="scripts/app/controllers/registrationController.js" type="text/javascript"></script>
     <script src="scripts/bootstrap.min.js"></script>
+    <link href="content/style.css" rel="stylesheet">
 </head>
     <body>
-        
         <div ng-app="registration" ng-controller="RegistrationCtrl" class="container">
             <div class="jumbotron"> 
                 <h1>Sample AngularJS Wizard SPA</h1>
             </div>
             <form class="form-horizontal" name="wizard" novalidate>
                 <div ng-switch="getCurrentStep()">
-                    <div class="row">
-                        <div class="col-md-11 col-md-offset-1">
-                            <h4>Step {{currentStep+1}}</h4>
+                    <fieldset>
+                        <legend>Step {{currentStep+1}}</legend>
+                        <div ng-switch-when="step1">
+                            <ng-include src="'scripts/app/views/step1.html'"></ng-include>
                         </div>
-                    </div>
 
-                    <div ng-switch-when="step1">
-                        <ng-include src="'scripts/app/views/step1.html'"></ng-include>
-                    </div>
-
-                    <div ng-switch-when="step2">
-                        <ng-include src="'scripts/app/views/step2.html'"></ng-include>
-                    </div>
-
-                    <div ng-switch-when="step3">
-                        <ng-include src="'scripts/app/views/step3.html'"></ng-include>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-sm-1 col-sm-offset-2">
-                            <button ng-click="prevStep()" ng-show="currentStep != 0" class="btn btn-primary">Back</button>
+                        <div ng-switch-when="step2">
+                            <ng-include src="'scripts/app/views/step2.html'"></ng-include>
                         </div>
-                        <div class="col-sm-1 col-sm-offset-1">
-                            <button type="submit" ng-click="nextStep(wizard)" ng-show="!isLastStep()" class="btn btn-primary">Next</button>
+
+                        <div ng-switch-when="step3">
+                            <ng-include src="'scripts/app/views/step3.html'"></ng-include>
                         </div>
-                    </div>
+
+                        <div class="form-group">
+                            <div class="col-sm-1 col-sm-offset-2">
+                                <button ng-click="prevStep()" ng-show="currentStep != 0" class="btn btn-primary">Back</button>
+                            </div>
+                            <div class="col-sm-1 col-sm-offset-1">
+                                <button type="submit" ng-click="nextStep(wizard)" ng-show="!isLastStep()" class="btn btn-primary">Next</button>
+                                <button type="submit" ng-click="submit()" ng-show="isLastStep()" class="btn btn-danger">Submit</button>
+                            </div>
+                        </div>
+                    </fieldset>
                 </div>
             </form>
         </div>
-    
+        <div class="footer">
+            <div class="container">
+                <p class="text-muted">All rights reserved. &copy; Piotr Benetkiewicz</p>
+            </div>
+        </div>
     </body>
 </html>
