--- a/AngularSPA/index.html
+++ b/AngularSPA/index.html
@@ -2,15 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Angular Registration</title>
-    <link href="content/bootstrap.min.css" rel="stylesheet">
-    <script src="scripts/jquery-2.1.1.js" type="text/javascript"></script>
-    <script src="scripts/angular.js" type="text/javascript"></script>
-    <script src="scripts/angular-route.js" type="text/javascript"></script>
-    <script src="scripts/app/app.js" type="text/javascript"></script>
-    <script src="scripts/app/services/carMakeService.js"></script>
-    <script src="scripts/app/controllers/registrationController.js" type="text/javascript"></script>
-    <script src="scripts/bootstrap.min.js"></script>
-    <link href="content/style.css" rel="stylesheet">
+    <link href="Content/css" rel="stylesheet">
+    <script src="scripts/libraries" type="text/javascript"></script>
+    <script src="scripts/application" type="text/javascript"></script>
 </head>
     <body>
         <div ng-app="registration" ng-controller="RegistrationCtrl" class="container">
