change app bundle to auto include

--- a/AngularSPA/index.html
+++ b/AngularSPA/index.html
@@ -16,15 +16,15 @@
                     <fieldset>
                         <legend>Step {{currentStep+1}}</legend>
                         <div ng-switch-when="step1">
-                            <ng-include src="'scripts/app/views/step1.html'"></ng-include>
+                            <ng-include src="'views/step1.html'"></ng-include>
                         </div>
 
                         <div ng-switch-when="step2">
-                            <ng-include src="'scripts/app/views/step2.html'"></ng-include>
+                            <ng-include src="'views/step2.html'"></ng-include>
                         </div>
 
                         <div ng-switch-when="step3">
-                            <ng-include src="'scripts/app/views/step3.html'"></ng-include>
+                            <ng-include src="'views/step3.html'"></ng-include>
                         </div>
 
                         <div class="form-group">
